log/build_2026-04-27_04-49-36/voice_robot_pkg/stdout_stderr.log
running egg_info
creating ../../build/voice_robot_pkg/voice_robot_pkg.egg-info
writing ../../build/voice_robot_pkg/voice_robot_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/voice_robot_pkg/voice_robot_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/voice_robot_pkg/voice_robot_pkg.egg-info/entry_points.txt
writing requirements to ../../build/voice_robot_pkg/voice_robot_pkg.egg-info/requires.txt
writing top-level names to ../../build/voice_robot_pkg/voice_robot_pkg.egg-info/top_level.txt
writing manifest file '../../build/voice_robot_pkg/voice_robot_pkg.egg-info/SOURCES.txt'
reading manifest file '../../build/voice_robot_pkg/voice_robot_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/voice_robot_pkg/voice_robot_pkg.egg-info/SOURCES.txt'
running build
running build_py
creating /home/tanvi/ros2_ws/build/voice_robot_pkg/build
creating /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib
creating /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg
copying voice_robot_pkg/test_mic.py -> /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg
copying voice_robot_pkg/helpers.py -> /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg
copying voice_robot_pkg/debug.py -> /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg
copying voice_robot_pkg/__init__.py -> /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg
copying voice_robot_pkg/map.py -> /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg
copying voice_robot_pkg/config.py -> /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg
copying voice_robot_pkg/main.py -> /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg
running install
running install_lib
creating /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg
copying /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg/test_mic.py -> /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg
copying /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg/helpers.py -> /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg
copying /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg/debug.py -> /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg
copying /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg/__init__.py -> /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg
copying /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg/map.py -> /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg
copying /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg/config.py -> /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg
copying /home/tanvi/ros2_ws/build/voice_robot_pkg/build/lib/voice_robot_pkg/main.py -> /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg
byte-compiling /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/test_mic.py to test_mic.cpython-310.pyc
byte-compiling /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/helpers.py to helpers.cpython-310.pyc
byte-compiling /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/debug.py to debug.cpython-310.pyc
byte-compiling /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/map.py to map.cpython-310.pyc
byte-compiling /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/config.py to config.cpython-310.pyc
byte-compiling /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/main.py to main.cpython-310.pyc
  File "/home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/main.py", line 339
    finally:
    ^^^^^^^
SyntaxError: invalid syntax

running install_data
creating /home/tanvi/ros2_ws/install/voice_robot_pkg/share/ament_index
creating /home/tanvi/ros2_ws/install/voice_robot_pkg/share/ament_index/resource_index
creating /home/tanvi/ros2_ws/install/voice_robot_pkg/share/ament_index/resource_index/packages
copying resource/voice_robot_pkg -> /home/tanvi/ros2_ws/install/voice_robot_pkg/share/ament_index/resource_index/packages
copying package.xml -> /home/tanvi/ros2_ws/install/voice_robot_pkg/share/voice_robot_pkg
running install_egg_info
Copying ../../build/voice_robot_pkg/voice_robot_pkg.egg-info to /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/tanvi/ros2_ws/build/voice_robot_pkg/install.log'
